apps/dasharr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dasharr
  labels:
    app.kubernetes.io/name: dasharr
    app.kubernetes.io/part-of: dasharr
spec:
  selector:
    app.kubernetes.io/name: dasharr
    app.kubernetes.io/part-of: dasharr
  ports:
    - name: http
      port: 80
      targetPort: 3000
