apps/dasharr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dasharr
  labels:
    app.kubernetes.io/name: dasharr
    app.kubernetes.io/part-of: dasharr
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: dasharr.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dasharr
                port:
                  number: 80
